# ChangeLog for app-text/mupdf
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-text/mupdf/ChangeLog,v 1.76 2013/06/12 14:30:19 xmw Exp $

  12 Jun 2013; Michael Weber <xmw@gentoo.org> mupdf-1.2.ebuild,
  mupdf-9999.ebuild:
  Fix library linking

  11 Jun 2013; Michael Weber <xmw@gentoo.org>
  +files/mupdf-9999-pkg-config.patch, files/mupdf-1.2-pkg-config.patch,
  files/mupdf-9999-openjpeg2.patch, mupdf-1.2.ebuild, mupdf-9999.ebuild:
  Fix pkg-config files.

  10 Jun 2013; Michael Weber <xmw@gentoo.org> mupdf-9999.ebuild:
  fix openjpeg:2 dep, thanks Helmut Jarausch (bug 472838)

  08 Jun 2013; Michael Weber <xmw@gentoo.org> +files/mupdf-1.2-pkg-config.patch,
  files/mupdf-9999-openjpeg2.patch, mupdf-1.2.ebuild, mupdf-9999.ebuild:
  Fix pkg-config/Libs

  08 Jun 2013; Michael Weber <xmw@gentoo.org> files/mupdf-9999-openjpeg2.patch,
  mupdf-1.2.ebuild, mupdf-9999.ebuild:
  Static builds, static openjpeg, desktop file.

  08 Jun 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag description from metadata

  07 Jun 2013; Michael Weber <xmw@gentoo.org>
  -files/mupdf-1.0-buildsystem.patch, metadata.xml, mupdf-1.0.ebuild,
  mupdf-1.1.ebuild, mupdf-1.1_p20121127.ebuild, mupdf-1.2.ebuild,
  mupdf-9999.ebuild:
  Switch to shared libs and binaries (USE=static static-libs, bug 407807),
  Desktop integration patch, advanced buildsystem patch for 1.0

  07 Jun 2013; Michael Weber <xmw@gentoo.org> mupdf-1.0.ebuild,
  mupdf-1.1.ebuild, mupdf-1.1_p20121127.ebuild, mupdf-1.2.ebuild:
  Use openjpeg:0

  06 Jun 2013; Michael Weber <xmw@gentoo.org> mupdf-9999.ebuild:
  Cleanup live ebuild

  06 Jun 2013; Michael Weber <xmw@gentoo.org> files/mupdf-9999-openjpeg2.patch:
  Fix openjpeg-2 pkg-config file

  06 Jun 2013; Michael Weber <xmw@gentoo.org> +files/mupdf-9999-openjpeg2.patch,
  mupdf-9999.ebuild:
  update to openjpeg-2

  04 May 2013; Michael Weber <xmw@gentoo.org> mupdf-9999.ebuild: