@@ -10,7 +10,7 @@ AUX mupdf-1.2-mubusy_rename_fix.patch 621 SHA256 63b2c440da458c470b276fa59271c6d
 AUX mupdf-1.2-pkg-config.patch 504 SHA256 1636b9ed8fa48609298a785625c14c1a9e03f10f2f4c1a502d963f4a05c14612 SHA512 3d49d9734e7390ce47a8313262e1b70b8a95552e6f3b4a9cd7a3e00b265c75d3eda8cc3c2013e379127206737f7d6520bfba7dedfe4103a8e652d4b3b713d3a1 WHIRLPOOL 6f190f196c465e801c7ec019fbdbedece4549d7f00d39c0946836ad22efd80c4702eab85e046792fa75952e83774316534007e387dbc77b4755cc8b9132bbe51
 AUX mupdf-9999-buildsystem.patch 251 SHA256 c2fc5eb9e09527385dd73ced61bf4e5ce0102ee0fac71d64165b582c086c1f21 SHA512 6563e8e28e713e605c1b180903c1097e54d7e35780e0f6b08d7ff86420d707a21ac59262bd34fd69f5fb458d34fb346f2e0f8fcc15bbcfb20199d3d34162a423 WHIRLPOOL 55c3035f21fbf484db631e4db09590611c134540db1859206c8b3930009ac57492a77056dd9b4134244434b334a56024cb1ac9c24bbc22205ab1a361d1482040
 AUX mupdf-9999-openjpeg2.patch 567 SHA256 64f0d8946d0fe037a95fd5a58b4622c913622f930b21dd6af39f030d282141e9 SHA512 0a43bc4eadf41bd0bf6a6f0e400d0cc0eb701575ac7fb44c271aa5f298071bfcd7b3c5d83709782c0c935721a27470c58cefd2b385178c2b121b620061a070f5 WHIRLPOOL 76e2a7d1146d8bf55819e0588863a9b21c2272566820d90c3779de00f33b9863995d2b1cab6804be2f42579bf1fa874a78e9380f575aa50461f2908dda3761b6
-AUX mupdf-9999-pkg-config.patch 563 SHA256 5ad0213db3778503c46f94bd69e2b4248dc31f4f265489ee25706a7775ca2256 SHA512 0933fb7cb0624e43a33505ccbc6548e5a3121533e27a8c6de6d98fff20f8f92b00b2295c0c83b4db351a9ee64f37f2427aa5930ecee2cb3e92f99233fd039c96 WHIRLPOOL a30d42461338672576b36cceea770e21761eff7c897bae45a703fd0ffe146187ebf46b63d5f82a17903b7c935ef3906566cc7ea0f0764ed330861a27c2d4b6b9
+AUX mupdf-9999-pkg-config.patch 519 SHA256 8cce601a801c90ef967588942238e0c7210ecaea76c22721ee2ad32667e1b396 SHA512 6de4e8b32841bef8cfb04a75453e14d573e98f61f6ab0f03b637208b8f1498a362619144bf2ddc72aec05d27bc7696178814c3354bb149e9505d38fc757b1a49 WHIRLPOOL d93000505a85e78cb1c2040d1ec3171cd6f65dbe4dac055dd2f8b32fe5b6cae2f28dd914e711e6f6091060bc9c06cfbb9a74c1554f4638d904d6673671860848
 DIST mupdf-1.0-source.tar.gz 4208530 SHA256 4f5e12625f7f827f6eb5606026c9a7a7dbdeaf935fcea3bc173ed8d469698ec2 SHA512 00f71288740a137fa3eb3537453f0465949a2dbc590a38651b3dd7a651dad6d0dc5070a3072988439f52729b12478cb467f202157ceb44e5a560431354567861 WHIRLPOOL b58166c37fa6ba81e946e53326dad50426886380b051943f2988657780e3c77e4970541f27ec3efc29ce6693012293bf3104dfd79dfc50f644c6f051431294f3
 DIST mupdf-1.1-source.tar.gz 4281735 SHA256 e54666bbe1d9f0a5464349bfbeffcf676c4a0fcad3efb89eba1f20d4ac991f34 SHA512 d61694041d28309e8119283fb97cef5e1f2effa6e93bfe5ad0b2a0b6b76e38a575a23b0ba367cb59efa77f35b131bf82667f2c7c8df29eb4cdbe3c12b0ad3a33 WHIRLPOOL 67ba7df6c0b94f3213b2e6a709fc3d9ec02945a0825169fb8833b2919b4bd4d8e6fd5f29b2b231df213f8e68d092526b59c152281b56d1c3a9064799ed35e60c
 DIST mupdf-1.1_p20121127.tar.gz 6922632 SHA256 4594bc0473e61200e6d2aba06488ea3127a7d42cd70daa01ea12c3dba5eb654c SHA512 1dff76502a5cf13e26f0bed30046878334730912ddec12f2674de69f62b173182020566f1ddd341bf3a51b28af1334c0cfcc70cac0ac8b0fb1dceacae6b25418 WHIRLPOOL 1597b87b7c53e522a5929b8c0c5c07b0a957084fb4b6974d68feea755d88606930b8a78b998efb94190c00d3d9135a60652f2751c709d49315ae10e30dc9ee0e
@@ -19,13 +19,13 @@ EBUILD mupdf-1.0.ebuild 1515 SHA256 3b298f1cfe6a01d665a14062604e40bbc823fee8df6e
 EBUILD mupdf-1.1.ebuild 1553 SHA256 5957e8e39a40c7bd80c60cc8964dc8cd6f77f5a61e9fe7aa498ea13839a2644e SHA512 494ddc8b2fabb2ba0ac2d12432e22162ecec37b1a4167994f15ffbee4fa8a2460993450591843e6bfdd319673109dd77cd4d02453575e5d0df01c2161e465565 WHIRLPOOL e0c33e733a33723c3ac91b45f001e2afe323260a235435a2a36783fb4c9eb8c5ae98895938bff3a6bd506346efdc582fd8e5575e84f133e733bf12bade4eaecd
 EBUILD mupdf-1.1_p20121127.ebuild 1488 SHA256 4e11b767db4d78de3d5b7e83ca1ec97880c30375249db419265100366fd20585 SHA512 fdbe754cf384c594f754a31e3d5153f25fc43966fc359f999e2852eb3eefbe13d1ca03a022dfbfd0a649a1b1a4f6d84fd5232005a5203ead16768eb12fa32f90 WHIRLPOOL 7b1e8e8b2b2c5209a5cd81de3bc70d0dae0d905d12006800618b1ac31212fe5b2bb0aef6a7e6dd8151052f1d56a1437d0687b10e635ddf2529e35eb9daedb6b8
 EBUILD mupdf-1.2.ebuild 3255 SHA256 cf06222b309c3911f41eeeeb42b50a83925aed7aeca8daa8a1edd6476a65f79f SHA512 32efb0f3a5c132bc4a06715caf3e03b1a4bd3eaeea44d09a14052c1bc39dfaabb871bb02aa79c09825bf6939315c7c58a582e761468a474a15ec53ce6f1120c7 WHIRLPOOL d26a23df3b02708151c3d9a3f1d7ba9f4c1a30250a2ceccfa633b58499fda18e87daa45fd9d7573d505a61125cccaa0ae70376e28b1fb6615dde9033cf175bf2
-EBUILD mupdf-9999.ebuild 3197 SHA256 9e6cf37bab1ae9c702f1fa6e3645506e342a9d8b848b64087cfcce196bb67ed7 SHA512 dd98cd5a2495b0f980a4c97bee4e51a8733f5b0c116017c5ca372ba0e30a7ebfa28e0100e7e57ae7feb26d75f79f05e0e7feafa0bae0f961846bb327279b3a5d WHIRLPOOL d2b6c4d5238e24e79d782aafc955bfb45adbf3d2be5d952228561c6e5e87a3d799576c0b43f7dd73d5149a6e3af81f473131bce33223430bd2f73fee3955012b
-MISC ChangeLog 11999 SHA256 a4ad9c45778dcf37151820484114084f102e7db27124e5f24500ec37efe2c4c3 SHA512 2387dca92f816863ac627f9084dfb0f858e588386a654c077929a3571da51a74e2a59d79b5a85b63d2c8c2516d8bffd78ffd72e7ab03692df851f13f8d7cedcc WHIRLPOOL f20db14a5db3c3c0bf43911ea3dce7ad3b2ebc9a46b66ef2ecc2a1adf63ccbbfbead3b8c821a8b0c96bc3bfce233bb260b7b360ff0af19d1e667be744449e539
+EBUILD mupdf-9999.ebuild 3203 SHA256 a4ae72a8def3d15fe36bd8e855a494ac2958d9a6ee29e907bce7505873721c2d SHA512 14b01e8dc5f7432395378b5a0af0c9b1d15e32c9aafb83f3af7b3090711d833468eccac069daba74ab9ca8625c676cf526e21aebd2313ace75e0be7cc7944724 WHIRLPOOL e0be6507ab2f62ba2d971ce1b29b071020910c525bcadfd137e3b6099f40150d250cd9a5442e4124ff0865e38058105f774b3d174bc3b887ce84f95538c2b1c5
+MISC ChangeLog 12138 SHA256 07e020f8fb5f8adefab083670941c2bf001d36031fc291ecddddc4e1f08211fa SHA512 9af9494da8604ed38043d74f778dc4355243f7e03ac30fb9a2ad8e1a20333d23ecd6527449da4dafc7af4799bfa7873b1a5f6aeb331d6430d25da25c1a9980a1 WHIRLPOOL edf471b7e09d7c401bfd59132ac0894ffb37a3043ac84cbdc3c506a2a904a7b95018e64ea35c86117dbaac5875dc48d926d643c3094ca672f51236f17c84c44b
 MISC metadata.xml 224 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7 SHA512 4f78d959809ec0db2f9be2a7747d572fa8ee03d177044dd46574881a6ee83736510b76062c12daecae609282d197ba466e8a3e3a654b1383e04c659acd41bef5 WHIRLPOOL 0300a228d371c918b051bc24859dfe4e5d0d2a71b80f697f202749c5aca69efcee4be6e69454c9abfa4ced28e19a9d1f71d6d7eaf54290b8d03b5c04fd209868
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iF4EAREIAAYFAlG4hf0ACgkQknrdDGLu8JCvVgD9F1CQTWltwTbLOaNTbF/F3lPR
-uyBgrL1os72Amx7kixABAIOz3+kD0vUZE7Yp+Vgf7XJuvJEqSxXpUxyfuRBWaq6T
-=H1XD
+iF4EAREIAAYFAlG7wP0ACgkQknrdDGLu8JBSywD/b35PGMAXc06cI+y7HQ/1+1GZ
+xkSTh+yLrHiRUlwDR98A/13sMjoYqN4BurbY7TKdv+6eK5rb8/VOw6Ci0Hg0wazR
+=yVCC
 -----END PGP SIGNATURE-----
